# ship-detection

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  inference.py  pyproject.toml  requirements.txt
ship_detection/: __init__.py  loader.py  logger.py  model.py  train.py
src/ship_detection/: __init__.py  loader.py  logger.py  model.py  train.py
