[tool.poetry]
name = "ship-classifier-cnn"
version = "0.1.0"
description = "Convolutional neural network for binary classification of aerial satellite images, determining whether a given contains a ship or not."
authors = ["Adam Muhtar <adam.muhtar23@imperial.ac.uk>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.6"
huggingface-hub = "^0.27.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
Pillow = "^11.0.0"
structlog = "^24.4.0"
torch = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
