[project]
name = "ship-detection"
dynamic = ["version"]
authors = [
    { name = "Adam Muhtar", email = "adam.muhtar23@imperial.ac.uk" },
]
description = "Convolutional neural network for binary classification of aerial satellite images, determining whether a given contains a ship or not."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.8",
    "huggingface-hub>=0.28.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "python-multipart>=0.0.20",
    "structlog>=25.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ship_detection"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "ship_detection.__version__"}

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = [
    "F",        # Pyflakes linter
    "E", "W",   # pycodestyle linter
    "I",        # isort
    "N",        # PEP 8 naming conventions
    "D",        # pydocstyle linter
    "S",        # flake8 bandit security checks
    "COM",      # flake8 commas
    "SIM",      # flake8 simplification suggestions
    "ERA001",   # no commented out code
    "TRY",      # tryceratops linter
    "NPY",      # NumPy-specific rules
    "FAST",     # FastAPI linting
    "RUF",     # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "T201",     # allow print statements in notebooks
    "I001",     # allow unsorted imports in notebooks
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
